@@ -136,7 +136,7 @@
 
                     {# INFO: "new page" button #}
                     {% if has_add_permission %}
-                        <a href="{% url opts|admin_urlname:'add' %}" class="cms-pagetree-header-create cms-btn cms-btn-toolbar cms-btn-action">
+                        <a href="{% url opts|admin_urlname:'add' %}?language={{ preview_language }}" class="cms-pagetree-header-create cms-btn cms-btn-toolbar cms-btn-action">
                             {% blocktrans with opts.verbose_name|title as name %}
                                 New Page
                             {% endblocktrans %}
