@@ -11,7 +11,7 @@
                     </a>
                     <ul>
                         <li class=" ">
-                            <a href="/en/admin/cms/page/?page_id=1&amp;language=en" data-rel="sideframe">
+                            <a href="/en/admin/cms/page/?amp;page_id=1&language=en" data-rel="sideframe">
                                 <span>Pages...<span class="cms-icon cms-icon-arrow"></span></span>
                             </a>
                         </li>
